--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   json_annotation: ^4.9.0
   url_launcher: ^6.3.1
   intl: ^0.19.0
+  mockito: ^5.4.4
+  
+  
   
 
 dev_dependencies:
@@ -50,6 +53,7 @@ dev_dependencies:
 
   build_runner: ^2.3.0
   json_serializable: ^6.8.0
+  test: ^1.25.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
